Add I#join(CharSequence, Object[]) and Variable#exact.